--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i"
+    "build":"npm i",
+    "dev":"concurrently \"npm start\" \"npm run client\""
 
   },
   "keywords": [],
